[package]
name = "vscode-extension-helm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "string"] }
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.117"
shellexpand = "3.1.0"
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
flate2 = "1.0.30"
